--- a/Sinchiamwebpage.html
+++ b/Sinchiamwebpage.html
@@ -28,8 +28,8 @@
             <br>
             <h2 class="title">About me</h2>
             <div class="text-right">
-            <p>My name is Marcos Sinchi Aguilar, I'm an freshman in Kean University trying to pursue a major in Computer Science. I graduated from East Side High School in Newark, NJ. 
-                My goal after graduating from Kean is being able to help people with the knowledge I gain from this semester.</p>
+            <p>My name is Marcos Sinchi Aguilar, a freshman at Kean University pursuing a major in Computer Science. I graduated from East Side High School in Newark, NJ. 
+                My goal after graduating from Kean is to be able to help people with the knowledge I gain from this semester.</p>
          </div>
     </div>
 </div>
@@ -38,7 +38,8 @@
         <br>
         <h2 class="title" style="margin-right: 15%; margin-left:auto;">Experience</h2>
         <div class="text-left">
-        <p>I have some Experience using Programming Languages like Python, HTML, and small amount of JavaScript and C# </p>
+        <p>I started coding in my Second year of High School, Where I learned How to build my webpage using HTML, CSS, and a little bit of JavaScript. 
+            I also have experience in Python and a little bit of C#.  </p>
         </div>
     </div>
     <img src="IMG_0624.jpeg" class="img" alt="Coding">
