--- a/Sinchiamwebpage.html
+++ b/Sinchiamwebpage.html
@@ -56,6 +56,19 @@
     <a href="https://www.kean.edu" class="schoollink"><br>Kean University</a></div>
 </p>
 <div>
+<div class="section_goals">
+    <div style="margin-left: auto;margin-right: auto;">
+        <br>
+        <h3 class="title"><u>My Goals</u></h3>
+        <div class="text-right;" style="justify-self:normal;">
+            <ul style="list-style:circle;">
+                <li>To improve my skill in HTMl</li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+</div>
     <a target="_blank" class="img_icons" href="https://www.linkedin.com/in/marcos-sinchi-aguilar-8591a9259/"><img src="Linkedin Logo.jpeg" class="img_icons"  alt="Linkedin-logo"></a>
     <a target="_blank" class="img_icons" href="https://www.instagram.com/Nighfo/"><img src="Instagram_icon.png" style="width: 45px;height:45px;border-radius:15%; margin-left:2%;" alt="Instagram-Icon"></a>
 </div>
