--- a/Sinchiamwebpage.html
+++ b/Sinchiamwebpage.html
@@ -44,18 +44,6 @@
     </div>
     <img src="IMG_0624.jpeg" class="img" alt="Coding">
 </div>
-
-<footer>
-<p style="font-size: 18px;">To Practice HTML visit:<br>
-   <br> Freecodecamp:<br>
-<a href="https://www.freecodecamp.org/">www.Freecodecamp.com</a><br>
-    w3schools: <br>
-<a href="https://w3schools.com/html/default.asp">www.w3schools.com</a><br></p>
-<div class="schoollink">
-<p style="font-size: 18px;">School Link:
-    <a href="https://www.kean.edu" class="schoollink"><br>Kean University</a></div>
-</p>
-<div>
 <div class="section_goals">
     <div style="margin-left: auto;margin-right: auto;">
         <br>
@@ -69,6 +57,16 @@
         </div>
     </div>
 </div>
+
+<footer>
+<p style="font-size: 18px;">To Practice HTML visit:<br>
+   <br> Freecodecamp:<br>
+<a href="https://www.freecodecamp.org/">www.Freecodecamp.com</a><br>
+    w3schools: <br>
+<a href="https://w3schools.com/html/default.asp">www.w3schools.com</a><br></p>
+<div class="schoollink">
+<p style="font-size: 18px;">School Link:
+    <a href="https://www.kean.edu" class="schoollink"><br>Kean University</a></div></p>
     <a target="_blank" class="img_icons" href="https://www.linkedin.com/in/marcos-sinchi-aguilar-8591a9259/"><img src="Linkedin Logo.jpeg" class="img_icons"  alt="Linkedin-logo"></a>
     <a target="_blank" class="img_icons" href="https://www.instagram.com/Nighfo/"><img src="Instagram_icon.png" style="width: 45px;height:45px;border-radius:15%; margin-left:2%;" alt="Instagram-Icon"></a>
 </div>
