--- a/Sinchiamwebpage.html
+++ b/Sinchiamwebpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Msaweb2.html</title>
-    <link href="style.css" rel="stylesheet" text = "type/css">
+    <link href="stylefix.css" rel="stylesheet" text = "type/css">
 </head>
 <body>
     <header>
@@ -50,10 +50,11 @@
         <h3 class="title"><u>My Goals</u></h3>
         <div class="text-right;" style="justify-self:normal;">
             <ul style="list-style:circle;">
-                <li>To improve my skill in HTMl</li>
+                <li style="color: #A5C9FF;">To improve my skill in HTMl</li>
                 <li></li>
                 <li></li>
             </ul>
+            <br>
         </div>
     </div>
 </div>
@@ -65,7 +66,10 @@
 <a href="https://w3schools.com/html/default.asp">www.w3schools.com</a><br></p>
 <div class="schoollink">
 <p style="font-size: 18px;">School Link:
-    <a href="https://www.kean.edu" class="schoollink"><br>Kean University</a></div></p>
+    <a href="https://www.kean.edu" class="schoollink"><br>Kean University</a></div>
+</p>
+<div>
     <a target="_blank" class="img_icons" href="https://www.linkedin.com/in/marcos-sinchi-aguilar-8591a9259/"><img src="Linkedin Logo.jpeg" class="img_icons"  alt="Linkedin-logo"></a>
     <a target="_blank" class="img_icons" href="https://www.instagram.com/Nighfo/"><img src="Instagram_icon.png" style="width: 45px;height:45px;border-radius:15%; margin-left:2%;" alt="Instagram-Icon"></a>
+</div>
 </footer>
